# discord-always-typing

./: Cargo.toml  README.md
.github/workflows/: build-linux-aarch64.yaml  build-linux-x86.yaml  build-windows-x86.yaml
.github/worksflows/: build-windows-x86.yaml
src/: config.rs  main.rs
