[package]
name = "discord-always-typing"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["rustls-tls"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.16"
serde = { version = "1.0.204", features = ["derive"] }
regex = "1.10.5"
